--- a/ServicioInterno/pom.xml
+++ b/ServicioInterno/pom.xml
@@ -39,6 +39,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+				
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
